# loopy

./: .envrc  .gitignore  .gitmodules  .ignore  .pre-commit-config.yaml  .typos.toml  CONTRIBUTING.md  Cargo.toml  README.md  SUPPORT.md  flake.nix  gpt.md
.cargo/: config  config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  custom.md  feature.md  release.md
.github/PULL_REQUEST_TEMPLATE/: pr.md
.github/scripts/: archive.ps1
.github/workflows/: comments.yaml  giphy.yaml  greetings.yaml  label.yaml  linter.yaml  release.yaml  rust.disabled  rust.yaml  stale.yaml  thumbs.yaml
WIP/: loopy.yaml
WIP/helm/ako/: values-http.yaml
WIP/helm/confluence/: values.1.yaml
WIP/helm/contour/: values.yaml
WIP/helm/crowd/: values.yaml
WIP/helm/nfs-server-provisioner/: values.yaml
WIP/manifests/bamboo-agent/: rbac.yaml
WIP/manifests/confluence/: license.yaml
WIP/manifests/contour-gateway/: gateway.yaml
WIP/manifests/crowd/: namespace.yaml  rbac.yaml
WIP/manifests/metallb/: config.yaml
WIP/manifests/test/: lb.yaml  namespace.yaml  pod.yaml
archived/scripts/: loopy.sh  values.sh
config/: looper.yaml  loopy.yaml
config/capi/kind/: config.yaml  hostpath-provisioner.yaml
config/capi/kind/metallb/: install.sh
config/capi/tkg/: cluster.yaml  cluster_atlassian-test.yaml
config/helm/: README.md
config/helm/atlassian-confluence/: values.yaml
config/helm/atlassian/charts/jira/: values.1.yaml
config/helm/bamboo/: values-http.yaml  values.yaml
config/helm/bitbucket/: values-http.yaml  values.yaml
config/helm/cert-manager/: values-kind.yaml  values.3.yaml
config/helm/cert-manager/manifests/: bootstrap.yaml  rbac.yaml
config/helm/confluence/: values-http.yaml
config/helm/contour/: values-kind.yaml  values.1.yaml
config/helm/contour-gateway/: install.yaml
config/helm/contour/manifests/: rbac.yaml
config/helm/crowd/: values-http.yaml  values.yaml
config/helm/gpu-operator/: values-old.yaml
config/helm/jira/: values-http.yaml  values.yaml
config/helm/nfs-server-provisioner/: values-kind.yaml
config/helm/postgresql-ha/: values.yaml
config/manifests/antrea/: namespace.yaml  rbac.yaml
config/manifests/apt-mirror/: Dockerfile  configmap.yaml  cronjob-debian-buster.yaml  cronjob-ubuntu-focal.yaml  cronjob-ubuntu.yaml  deployment.yaml  entrypoint.sh  hpa.yaml  ingress.yaml  job-ubuntu.yaml  job.yaml  namespace.yaml  pvc.yaml  rbac.yaml  secret.yaml  service.yaml
config/manifests/apt-mirror/oci/: Dockerfile
config/manifests/atlassian-bamboo/: rbac.yaml
config/manifests/atlassian-bamboo-agent/: rbac.yaml
config/manifests/atlassian-bitbucket/: namespace.yaml  rbac.yaml
config/manifests/atlassian-confluence/: secret.yaml
config/manifests/atlassian-crowd/: namespace.yaml  rbac.yaml
config/manifests/atlassian-jira/: namespace.yaml
config/manifests/bamboo/: namespace.yaml  rbac.yaml
config/manifests/bamboo-agent/: namespace.yaml  rbac.yaml
config/manifests/bitbucket/: namespace.yaml  rbac.yaml
config/manifests/cert-authority/: bootstrap.yaml  ca.yaml  namespace.yaml  nsp.yaml
config/manifests/cert-manager/: namespace.yaml  rbac.yaml
config/manifests/certificate-authority/: bootstrap.yaml  namespace.yaml
config/manifests/confluence/: license.yaml  namespace.yaml  rbac.yaml  secret.yaml
config/manifests/contour/: namespace.yaml  rbac.yaml
config/manifests/contour-gateway/: example.yaml  gateway.yaml  namespace.yaml
config/manifests/crowd/: rbac.yaml
config/manifests/gpu-operator/: configmap.yaml  namespace.yaml  pod.yaml  rbac.yaml  secret.yaml
config/manifests/jira/: namespace.yaml  rbac.yaml
config/manifests/metallb/: config.yaml  namespace.yaml  socat.sh
config/manifests/nfs-server/: namespace.yaml
config/manifests/nfs-server-provisioner/: namespace.yaml
config/manifests/portal/: configmap.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  service.yaml
config/manifests/postgresql-ha/: namespace.yaml
config/manifests/test/: BBB.yaml  certificate.yaml  lb.yaml  namespace.yaml  pod.yaml
docs/: kind.md  test.md
nix/devshells/devenv/: default.nix
scripts/: loopy.sh
scripts/metallb/: install.sh
src/: args.rs  build.rs  config.rs  fortune.rs  helm.rs  kubectl.rs  logger.rs  main.rs  msvc.rs  utils.rs
src-bak/: config.rs  kubectl.rs  utils.rs
test/: TODO.md
(+16 files in other folders)
