[package]
authors = ["MAHDTech", "<MAHDTech@saltlabs.tech>"]
description = "Kubernetes packaging inner feedback loop."
documentation = "https://github.com/salt-labs/loopy"
edition = "2021"
homepage = "https://github.com/salt-labs/loopy"
license-file = "LICENSE"
name = "loopy"
version = "0.2.0-beta.0"
publish = true

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.1.13", features = ["cargo", "derive"] }
colored = "2.0"
crossterm = "0.26.1"
curl-sys = "0.4.27"
env_logger = "0.10.0"
fern = "0.6.2"
figlet-rs = "0.1.5"
flate2 = "1.0.25"
futures-util = "0.3.27"
indicatif = "0.17.3"
k8s-openapi = { version = "0.18.0", features = ["v1_21"] }
kube = "0.82.2"
libz-sys = "1.1.8"
lzma-sys = "0.1.20"
log = "0.4.17"
infer = "0.13.0"
openssl = { version = "0.10.53", features = ["vendored"] }
openssl-sys = { version = "0.9.88", features = ["vendored"] }
rand = "0.8.5"
reqwest = { version = "0.11.15", features = [
	"stream",
	"blocking",
	"json",
	"native-tls-vendored",
] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
tar = "0.4.38"
tempfile = "3.4.0"
tokio = { version = "1.26.0", features = ["full"] }
vcpkg = "0.2.15"
which = "4.4.0"
zip = "0.6.4"

[dependencies.magic-sys]
version = "0.3.0"
default-features = false
features = ["v5-38"]

[build-dependencies]
serde = "1.0.158"
serde_json = "1.0.94"
cc = "1.0.79"
pkg-config = "0.3.26"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "master"
dependencies = ["curl", "openssl", "zlib"]
